// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render checkbox checked 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(12px + 2 * (6px + 1px));
  height: calc(12px + 2 * (6px + 1px));
  border-radius: 4px;
  padding: 6px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 12px;
  height: 12px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 3px;
  -webkit-transition: -webkit-transform0.15scubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform0.15scubic-bezier(0.34,1.56,0.64,1);
  transition: transform0.15scubic-bezier(0.34,1.56,0.64,1);
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-checkbox"
    >
      <div
        class="c2"
        data-testid="pbl-checkbox-handle"
      />
      <input
        checked=""
        class="c3"
        data-testid="pbl-checkbox-input"
        id="custom-id"
        type="checkbox"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render checkbox unchecked 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(12px + 2 * (6px + 1px));
  height: calc(12px + 2 * (6px + 1px));
  border-radius: 4px;
  padding: 6px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 12px;
  height: 12px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 3px;
  -webkit-transition: -webkit-transform0.15scubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform0.15scubic-bezier(0.34,1.56,0.64,1);
  transition: transform0.15scubic-bezier(0.34,1.56,0.64,1);
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-checkbox"
    >
      <div
        class="c2"
        data-testid="pbl-checkbox-handle"
      />
      <input
        class="c3"
        data-testid="pbl-checkbox-input"
        id="custom-id"
        type="checkbox"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render checkbox with label 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
  margin-left: 8px;
  margin-bottom: 0;
}

<label
  class="c0"
  data-testid="pbl-checkbox-label"
  for="custom-id"
>
  I am a 
  <strong>
    label
  </strong>
</label>
`;
